@@ -612,6 +612,7 @@ Folder.editableFields.defaultProfile.label=Default Profile
 Folder.editableFields.useTrashFolder.label=Use Trash Folder
 Folder.editableFields.notifyNewMessagesMain.label=Display New Message Notification on Title Bar
 Folder.editableFields.notifyNewMessagesNode.label=Display New Message Notification on Folder List
+Folder.editableFields.autoCache.label=Auto cache messages (IMAP only)
 
 Store.editableFields.editor.config.label=Configuration
 Store.editableFields.editor.connection.label=Connection
