@@ -8,15 +8,15 @@
      *) test with desktop/external apps.
 
 -----
+*) add a way to specify caching scheme per folder, so we can avoid autocaching
+	of messages in spam and/or sent folders.
+
 *) test w/gnu javamail -- ???
 *) test w/javamail 1.3.2.
 
 *) add a real debug system.
 
 *) separate out ui interfaces from swing implementations.
-
-*) add a way to specify caching scheme per folder, so we can avoid autocaching
-	of messages in spam and/or sent folders.
 
 *) add support for running without any local files.
 	-- support for http: access?
